--- a/calculations/linearized_equations.tex
+++ b/calculations/linearized_equations.tex
@@ -243,6 +243,63 @@ where $a, b \in [1, 8]$ denote the perturbed variables. In what follows $dr$ sho
 All other matrix elements are equal to zero.
 \endgroup
 
+\subsection{Matrix elements}
+Matrix elements for matrix B:
+\begin{enumerate}
+	\item \makebox[3cm][l]{\textbf{Qua $\times$ Qua:}}	\begin{minipage}[t]{13cm}
+														 B(1, 1), B(3, 3), B(4, 4), B(5, 5), B(6, 6)
+														\end{minipage} 
+	\item \makebox[3cm][l]{\textbf{Cub $\times$ Cub:}}	\begin{minipage}[t]{13cm}
+														 B(2, 2), B(7, 7), B(8, 8)
+														\end{minipage}
+\end{enumerate}
+
+\newpage\noindent
+Matrix elements for matrix A:
+\begin{enumerate}
+	\item \makebox[3cm][l]{\textbf{Qua~ $\times$ Qua~:}} \begin{minipage}[t]{13cm}
+													      A(1, 1), A(1, 3), A(1, 4), A(3, 1), A(3, 3), A(3, 5), A(3, 6), A(4, 1), A(4, 4), A(4, 5), A(4, 6), A(5, 1), A(5, 3), A(5, 4),
+														  A(5, 5), A(5, 6), A(6, 3), A(6, 4), A(6, 6), {\color{blue} A(5, 1), A(5, 5), A(5, 6)}
+													     \end{minipage}
+	\item \makebox[3cm][l]{\textbf{Qua~ $\times$ Cub~:}} \begin{minipage}[t]{13cm}
+														  A(1, 2), A(3, 2), A(3, 7), A(3, 8), A(4, 2), A(4, 7), A(4, 8), A(5, 2), A(5, 7), A(5, 8)
+													     \end{minipage}
+	\item \makebox[3cm][l]{\textbf{Qua~ $\times$ Cub':}} \begin{minipage}[t]{13cm}
+														  A(1, 2), A(3, 7), A(3, 8), A(4, 7), A(4, 8), A(5, 2), A(5, 7), A(5, 8), A(6, 7), A(6, 8), {\color{blue} A(5, 7), A(5, 8)}
+														 \end{minipage} 
+	\item \makebox[3cm][l]{\textbf{Cub~ $\times$ Qua~:}} \begin{minipage}[t]{13cm}
+														 A(2, 1), A(2, 3), A(2, 6), {\color{blue} A(2, 1), A(2, 5)}
+														 \end{minipage}
+	\item \makebox[3cm][l]{\textbf{Cub' $\times$ Qua~:}} \begin{minipage}[t]{13cm}
+														  A(2, 1), A(2, 5)
+														 \end{minipage} 
+	\item \makebox[3cm][l]{\textbf{Cub~ $\times$ Cub~:}} \begin{minipage}[t]{13cm}
+														  A(2, 2), A(2, 7), A(2, 8), A(7, 2), A(7, 7), A(7, 8), A(8, 2), A(8, 7), A(8, 8)
+														 \end{minipage} 
+	\item \makebox[3cm][l]{\textbf{Cub~ $\times$ Qua':}} \begin{minipage}[t]{13cm}
+														  A(2, 6)
+														 \end{minipage}
+	\item \makebox[3cm][l]{\textbf{Cub~ $\times$ Cub':}} \begin{minipage}[t]{13cm}
+														  A(2, 8), {\color{blue} A(2, 7), A(2, 8)}
+														 \end{minipage} 
+	\item \makebox[3cm][l]{\textbf{Cub' $\times$ Cub':}} \begin{minipage}[t]{13cm}
+														  A(2, 7), A(2, 8)
+														 \end{minipage} 
+	\item \makebox[3cm][l]{\textbf{Qua' $\times$ Qua~:}}  \begin{minipage}[t]{13cm}
+														  A(5, 1), A(5, 5), A(5, 6)
+														 \end{minipage} 
+	\item \makebox[3cm][l]{\textbf{Qua~ $\times$ Qua':}} \begin{minipage}[t]{13cm}
+														  A(5, 5), {\color{blue} A(5, 5)}
+														 \end{minipage} 
+	\item \makebox[3cm][l]{\textbf{Qua' $\times$ Qua':}} \begin{minipage}[t]{13cm}
+														  A(5, 5)
+														 \end{minipage} 
+	\item \makebox[3cm][l]{\textbf{Qua' $\times$ Cub~:}} \begin{minipage}[t]{13cm}
+														  A(5, 7), A(5, 8)
+														 \end{minipage}
+													 
+\end{enumerate}
+
 
 
 
