--- a/calculations/linearized_equations.tex
+++ b/calculations/linearized_equations.tex
@@ -133,7 +133,7 @@ Tildes are dropped below for convenience.
 										&~~~~ 	- i(\gamma - 1)\frac{(\kappa_\parallel - \kappa_\bot)}{\eps}\frac{1}{B^2}\left(\frac{k_2}{\eps}B_{02} + k_3B_{03}\right)T_1 
 												+ i(\gamma -1)\frac{1}{\eps}\left[\eps\kappa_\bot\left(\frac{T_1}{\eps}\right)'\right]'																						\\
 										&~~~~ - i(\gamma - 1)\frac{\kappa_\bot}{\eps}\left(\frac{k_2^2}{\eps^2} + k_3^2\right)T_1 + i(\gamma - 1)\frac{1}{\eps}\left(\eps\kappa_{\bot, 1}T_0'\right)'						\\
-										&~~~~ + i(\gamma - 1)\frac{(\kappa_\bot - \kappa_\parallel)}{\eps}\frac{1}{B^2}\left[\left(k_2k_3B_{02} + k_3^2B_{03}\right)a_2 - \left(k_2^2B_{02} + k_2k_3B_{03}\right)a_3\right]	\\
+										&~~~~ + i(\gamma - 1)\frac{(\kappa_\parallel - \kappa_\bot)}{\eps}\frac{1}{B^2}\left[\left(k_2k_3B_{02} + k_3^2B_{03}\right)a_2 - \left(k_2^2B_{02} + k_2k_3B_{03}\right)a_3\right]	\\
 										&~~~~ - i(\gamma - 1)\HL_0\frac{1}{\eps}\rho_1 - i(\gamma - 1)\frac{1}{\eps}\rho_0\left(\HL_T T_1 + \HL_\rho\rho_1\right)															\\[8pt]
 		\omega a_1						&= -B_{03}v_2 + \frac{1}{\eps}B_{02}v_3 - \frac{1}{\eps}v_{02}a_2' - v_{03}a_3' + \left(\frac{k_2}{\eps}v_{02} + k_3v_{03}\right)a_1												\\[8pt]
 		\omega \frac{a_2}{\eps}			&= -\frac{1}{\eps}B_{03}v_1 - \frac{1}{\eps}\left(k_2a_3 -k_3a_2\right)v_{03}																										\\[8pt]
@@ -221,7 +221,7 @@ where $a, b \in [1, 8]$ denote the perturbed variables. In what follows $dr$ sho
 				 &~~~~ + \int \left[i(\gamma - 1)\frac{\eps'}{\eps}2T_0'(\eps B_{02}k_3 - B_{03}k_2)\frac{\partial \kappa_\bot}{\partial(B^2)}\right] h_j^5 h_k^6 dr																					\\
 				 &~~~~ - \int \left[i(\gamma - 1)\frac{1}{\eps}2T_0'(\eps B_{02}k_3 - B_{03}k_2)\frac{\partial \kappa_\bot}{\partial(B^2)}\right] \frac{dh_j^5}{dr} h_k^6 dr																			\\
 	A_{jk}(5, 7) &=  \left[i(\gamma - 1)\frac{2}{\eps}T_0'B_{03}\frac{\partial \kappa_\bot}{\partial(B^2)}\right] h_j^5 \frac{dh_k^7}{dr} 
-												 + \int \left[i(\gamma - 1)\frac{(\kappa_\bot - \kappa_\parallel)}{\eps} \frac{1}{B^2}(k_2k_3B_{02} + k_3^2B_{02})T_0'\right] h_j^5 h_k^7 dr 															\\
+												 + \int \left[i(\gamma - 1)\frac{(\kappa_\parallel - \kappa_\bot)}{\eps} \frac{1}{B^2}(k_2k_3B_{02} + k_3^2B_{02})T_0'\right] h_j^5 h_k^7 dr 															\\
 				 &~~~~ + \int \left[i(\gamma - 1)\frac{\eps'}{\eps^2}2T_0'B_{03}\frac{\partial \kappa_\bot}{\partial(B^2)}\right] h_j^5 \frac{dh_k^7}{dr}dr
 				 								 - \int \left[i(\gamma - 1)\frac{2}{\eps}T_0'B_{03}\frac{\partial \kappa_\bot}{\partial(B^2)}\right] \frac{dh_j^5}{dr}\frac{dh_k^7}{dr} dr																\\
 	A_{jk}(5, 8) &= -\left[i(\gamma - 1)2T_0'B_{02}\frac{\partial \kappa_\bot}{\partial(B^2)}\right] h_j^5 \frac{dh_k^8}{dr} 
